--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,9 +25,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  flutter_launcher_icons: ^0.13.1
   flutter_lints: ^2.0.0
-
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "images/logo.jpg"
 flutter:
   uses-material-design: true
   assets:
