--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   raised_buttons: ^0.0.2
   firebase_auth: ^4.9.0
   cloud_firestore: ^4.9.2
+  flutter_svg: ^2.0.7
 
 dev_dependencies:
   flutter_test:
